ROU-4482: Fixed SS preview of input on time-related pickers (#797)
* Fixed SS preview of input on time related pickers

Fixed SS preview of input on time related pickers

* Update _timepicker.scss

Fixed a misalignment on the Time picker preview image

--- a/src/scripts/OSFramework/OSUI/Pattern/TimePicker/scss/_timepicker.scss
+++ b/src/scripts/OSFramework/OSUI/Pattern/TimePicker/scss/_timepicker.scss
@@ -27,6 +27,10 @@
 		// Hide the platform input which is set as hidden by the library and we're change it into the expected type, however we do not want it visible since library will add a clone to better deal with the selected dates.
 		&:first-of-type {
 			display: none !important;
+			// Make the platform input visible in Service Studio
+			& {
+				-servicestudio-display: inline-flex !important;
+			}
 		}
 
 		// Disable states for Datepicker
@@ -46,7 +50,7 @@
 		// Service Studio Preview
 		& {
 			-servicestudio-background-color: transparent;
-			-servicestudio-background-position: top center;
+			-servicestudio-background-position: top left;
 			-servicestudio-background-repeat: no-repeat;
 			-servicestudio-background-size: contain;
 			-servicestudio-border-radius: var(--border-radius-soft);
